# information-geometric-adaptive-sampling

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  EXTENSIONS.md  INDEX.md  MATH.md  USAGE.md  deployment.md
examples/: demo.py
scripts/: ci.sh
src/igasgd/: __init__.py  config.py  models.py  sampler.py  schedule.py  utils.py
tests/: test_config.py  test_models.py  test_sampler.py  test_schedule.py  test_utils.py
